# Projeto-Anceu-CS50

./: .gitignore  Brief_Explanation.md  README.md  RUN_NO_PYTHON.lnk  RUN_PYTHON.lnk  notas_de_corte_acesso_enem_unb_2022.py  projeto.py  requirements.txt  run_project.cmd
.github/ISSUE_TEMPLATE/: reportar-erro-bug.md
APP_NO_PYTHON/: aprovados.txt
APP_NO_PYTHON/Pmw/Pmw_2_1_1/contrib/: MCListbox.py  PmwFileDialog.py  PmwFullTimeCounter.py  TreeBrowser.py
APP_NO_PYTHON/Pmw/Pmw_2_1_1/demos/: All.py  Args.py  BltGraph.py  BltTabset.py  ComboBox.py  ComboBoxDialog.py  Counter.py  CounterDialog.py  DemoVersion.py  Dialog.py  EntryField.py  Group.py  LogicalFont.py  MainMenuBar.py  MenuBar.py  MessageDialog.py  NoteBook_2.py  OptionMenu.py  PanedWidget.py  PromptDialog.py  RadioSelect.py  ScrolledCanvas.py  ScrolledFrame.py  ScrolledListBox.py  ScrolledText_2.py  SelectionDialog.py  SpecialEntry.py  SpeedTest.py  TimeCounter.py
APP_NO_PYTHON/Pmw/Pmw_2_1_1/doc/: AboutDialog.html  Balloon.html  Blt.html  ButtonBox.html  Color.html  ComboBox.html  ComboBoxDialog.html  Counter.html  CounterDialog.html  Dialog.html  EntryField.html  Group.html  HistoryText.html  LabeledWidget.html  MainMenuBar.html  MegaArchetype.html  MegaToplevel.html  MegaWidget.html  MenuBar.html  MessageBar.html  MessageDialog.html  NoteBook.html  OptionMenu.html  PanedWidget.html  PmwFunctions.html  PromptDialog.html  RadioSelect.html  ScrolledCanvas.html  ScrolledField.html  ScrolledFrame.html  ScrolledListBox.html  ScrolledText.html  TextDialog.html  (+17 more)
APP_PYTHON/: app.py  requirements.txt  run_app.cmd  run_project.cmd
C++ version (new)/: Anceu.sln
C++ version (new)/Anceu/: Anceu.vcxproj  Anceu.vcxproj.filters
C++ version (new)/ImGui/: ImGui.vcxproj  ImGui.vcxproj.filters
C++ version (new)/Neyo/: Neyo.vcxproj  Neyo.vcxproj.filters
Python Version (old)/: app.py
new_cpp_app/: CMakeLists.txt  new_app_cpp.sln
new_cpp_app/Anceu/: Anceu.vcxproj  Anceu.vcxproj.filters
new_cpp_app/Anceu/Source/Headers/: anceu.h  colors.h  khlorz_combo_filter.h  resources.h  texts.h
new_cpp_app/Anceu/Source/Implementations/: anceu.cpp  colors.cpp  khlorz_combo_filter.cpp  main.cpp  texts.cpp  ui.cpp  utils.cpp
new_cpp_app/Anceu/Source/Resources/: fonts.cpp  sounds.cpp
new_cpp_app/ImGui/: ImGui.vcxproj  ImGui.vcxproj.filters
new_cpp_app/ImGui/Source/Headers/: imgui.h
new_cpp_app/ImGui/Source/Implementations/: imgui_draw.cpp  imgui_tables.cpp  imgui_widgets.cpp
new_cpp_app/Neyo/: Neyo.vcxproj  Neyo.vcxproj.filters
new_cpp_app/Neyo/Source/Headers/: neyo.h
new_cpp_app/Neyo/Source/Implementations/: neyo.cpp
(+51 files in other folders)
